
[workspace]
resolver = "2"
members = ["cli", "clients/rust", "parser", "program", "store"]

[workspace.package]
version = "0.5.0"

[workspace.dependencies]
yellowstone-vixen = "0.2.0"
yellowstone-shield = { path = "program", version = "0.5.0" }
yellowstone-shield-cli = { path = "cli", version = "0.5.0" }
yellowstone-shield-client = { path = "clients/rust", version = "0.5.0" }
yellowstone-shield-parser = { path = "parser", version = "0.5.0" }
anyhow = "1.0.97"
solana-sdk = "~2.1.11"
solana-program = "~2.1.11"

[workspace.metadata.patch.crates-io]
solana-program = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.1.11-triton-public" }
solana-sdk = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.1.11-triton-public" }

[workspace.metadata.toolchains]
format = "1.85"
lint = "1.85"

[workspace.metadata.cli]
solana = "2.1.11"
