[workspace]
resolver = "2"
members = ["cli", "clients/rust", "parser", "program", "store"]

[workspace.package]
version = "0.5.0"

[workspace.dependencies]
yellowstone-vixen = "0.2.0"
yellowstone-shield = { path = "program", version = "0.5.0" }
yellowstone-shield-cli = { path = "cli", version = "0.5.0" }
yellowstone-shield-client = { path = "clients/rust", version = "0.5.0" }
yellowstone-shield-parser = { path = "parser", version = "0.5.0" }
anyhow = "~1.0.97"
# Solana SDK (decoupled from Agave)
# See: https://github.com/anza-xyz/solana-sdk
solana-pubkey = "~2.2.1"
solana-transaction = { version = "~2.2.1", features = ["bincode"] }
solana-instruction = "~2.2.1"
solana-commitment-config = "~2.2.1"
solana-keypair = "~2.2.1"
solana-message = "~2.2.1"
solana-signer = "~2.2.1"
solana-program = "~2.2.1"
# Agave Crates
solana-hash = "~2.2.16"
solana-cli = "~2.2.16"
solana-cli-config = "~2.2.16"
solana-client = "~2.2.16"
solana-account-decoder-client-types = "~2.2.16"
solana-program-test = "~2.2.16"

[workspace.metadata.toolchains]
format = "1.85"
lint = "1.85"

[workspace.metadata.cli]
solana = "2.2.16"
