[workspace]
resolver = "2"
members = ["cli", "clients/rust", "parser", "program", "store"]

[workspace.package]
version = "0.5.0"

[workspace.dependencies]
arc-swap = "1.6"
anyhow = "~1.0.97"
anchor-lang = "~0.31.0"
async-trait = "~0.1.88"
borsh = "^0.10"
borsh_0_10 = { version = "^0.10", package = "borsh" }
bs58 = "~0.5.1"
bytemuck = "1"
clap = "~4.5.32"
clap_derive = "~4.5.32"
env_logger = "~0.11.3"
hashbrown = "0.14"
log = "~0.4.21"
num-derive = "^0.4.2"
num-traits = "^0.2"
parking_lot = "0.12"
pinocchio = "~0.8.1"
pinocchio-system = "~0.2.3"
pinocchio-pubkey = "~0.2.4"
serde = "1"
serde_json = "~1.0.117"
serde_with = "3"
# Solana SDK (decoupled from Agave)
# See: https://github.com/anza-xyz/solana-sdk
solana-pubkey = "~2.2.1"
solana-transaction = { version = "~2.2.1", features = ["bincode"] }
solana-instruction = "~2.2.1"
solana-commitment-config = "~2.2.1"
solana-keypair = "~2.2.1"
solana-message = "~2.2.1"
solana-signer = "~2.2.1"
solana-program = "~2.2.1"
# Agave Crates
solana-hash = "~2.2.16"
solana-cli = "~2.2.16"
solana-cli-config = "~2.2.16"
solana-client = "~2.2.16"
solana-account-decoder-client-types = "~2.2.16"
solana-program-test = "~2.2.16"
spl-associated-token-account = "6"
spl-pod = "0.5"
spl-token = { version = "6" }
spl-token-group-interface = "0.6"
spl-token-metadata-interface = "0.6"
spl-token-2022 = "7"
thiserror = "^1.0"
tokio = "1"
toml = "~0.8.2"
yellowstone-vixen = "0.2.0"
yellowstone-vixen-core = "0.2.0"
yellowstone-shield = { path = "program", version = "0.5.0" }
yellowstone-shield-cli = { path = "cli", version = "0.5.0" }
yellowstone-shield-client = { path = "clients/rust", version = "0.5.0" }
yellowstone-shield-parser = { path = "parser", version = "0.5.0" }

[workspace.metadata.toolchains]
format = "1.85"
lint = "1.85"

[workspace.metadata.cli]
solana = "2.2.16"
