[package]
name = "yellowstone-shield-cli"
version = "0.5.0"
edition = "2021"
description = "Yellowstone Shield CLI"
license = "Apache-2.0"

[dependencies]
clap = "4.5.32"
clap_derive = "4.5.32"
yellowstone-shield-client = { workspace = true, features = [
  "token-extensions",
] }
solana-sdk = "2.1.11"
solana-cli = "2.1.11"
solana-cli-config = "2.1.11"
solana-client = "2.1.11"
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.117"
bs58 = "0.5.1"
async-trait = "0.1.88"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.69"
anyhow = { workspace = true }
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
borsh = "^0.10"
spl-token-metadata-interface = { version = "0.6" }
spl-pod = "0.5"
