[package]
name = "yellowstone-shield-cli"
version = "0.5.0"
edition = "2021"
description = "Yellowstone Shield CLI"
license = "Apache-2.0"

[dependencies]
clap = "4.5.32"
clap_derive = "4.5.32"
yellowstone-shield-client = { workspace = true, features = [
  "token-extensions",
] }
# Agave Crates
solana-cli = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
# Solana SDK (decoupled from Agave)
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-signer = { workspace = true }
solana-commitment-config = { workspace = true }
# End of Solana SDK
env_logger = { workspace = true }
log = { workspace = true } 
serde_json = { workspace = true } 
bs58 = { workspace = true } 
async-trait = { workspace = true } 
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true } 
anyhow = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
borsh = { workspace = true } 
spl-token-metadata-interface = { workspace = true }
spl-pod = { workspace = true } 
