[package]
name = "yellowstone-shield-parser"
version = "0.5.0"
edition = "2021"
description = "Parser for the Yellowstone Shield program"
license = "Apache-2.0"

[dependencies]
yellowstone-shield-client = { workspace = true }
yellowstone-vixen-core = { workspace = true }
borsh_0_10 = { workspace = true }
solana-program = { workspace = true }
