[package]
name = "yellowstone-shield"
version = "0.5.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "b1ockYL7X6sGtJzueDbxRVBEEPN4YeqoLW276R3MX8W"
program-dependencies = []
account-dependencies = []

[features]
no-entrypoint = []
test-sbf = ["no-entrypoint"]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false


[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
shank = "^0.4.2"
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-pod = { workspace = true }
bytemuck = { workspace = true }
pinocchio = { workspace = true, features = ["std"] }
pinocchio-system = { workspace = true }
pinocchio-pubkey = { workspace = true}
