[package]
name = "yellowstone-shield-store"
version = "0.5.2"
edition = "2021"
description = "Policy store for the Yellowstone Shield program"
license = "Apache-2.0"

[dependencies]
arc-swap = { workspace = true } 
hashbrown = { workspace = true } 
parking_lot = { workspace = true } 
yellowstone-shield-client = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-commitment-config = { workspace = true }
log = { workspace = true } 
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true } 
anyhow = { workspace = true }
borsh_0_10 = { workspace = true }
yellowstone-vixen = { workspace = true }
yellowstone-shield-parser = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive"] }
solana-account-decoder-client-types = { workspace = true }

[dev-dependencies]
toml = "~0.8.2"
clap = "~4.5.32"
clap_derive = "~4.5.32"
yellowstone-shield-cli = { workspace = true }
env_logger = "~0.11.3"
solana-cli = { workspace = true }
solana-cli-config = { workspace = true }
solana-pubkey = { workspace = true }
