[package]
name = "yellowstone-blocklist-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for Yellowstone Blocklist Program"

[dependencies]
solana-sdk = "~2.1.11"
thiserror = "2.0.12"
borsh = "1.5.5"
bytemuck = "1.22.0"

[dev-dependencies]
solana-sdk = "~2.1.11"
solana-client = "~2.1.11"
dotenvy = "0.15.7"

[[example]]
name = "blocklist_lifecycle"
path = "examples/blocklist_lifecycle.rs"

[[example]]
name = "simple_blocklist"
path = "examples/simple_blocklist.rs"

[[example]]
name = "query_blocklist"
path = "examples/query_blocklist.rs"
