[package]
name = "yellowstone-blocklist-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for Yellowstone Blocklist Program"

[dependencies]
solana-sdk = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
dotenvy = "0.15.7"

[[example]]
name = "blocklist_lifecycle"
path = "examples/blocklist_lifecycle.rs"

[[example]]
name = "simple_blocklist"
path = "examples/simple_blocklist.rs"

[[example]]
name = "query_blocklist"
path = "examples/query_blocklist.rs"
