[package]
name = "solana-yellowstone-blocklist"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
getrandom = { workspace = true, features=["dummy"] }

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "~2.0.14"
solana-program-test = "~2.0.14"
solana-sdk = "~2.0.14"
borsh = "1.5.1"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
