[package]
name = "yellowstone-shield-client"
version = "0.5.0"
description = "A generated Rust library for the Blocklist program"
repository = "https://github.com/rpcpool/yellowstone-shield"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[features]
test-sbf = []
fetch = []
anchor-idl-build = []
anchor = ["dep:anchor-lang"]
serde = ["dep:serde", "dep:serde_with"]
token-extensions = [
  "dep:spl-associated-token-account",
  "dep:spl-token-2022",
  "dep:spl-token-metadata-interface",
  "dep:spl-pod",
]

[dependencies]
anchor-lang = { version = "0.31.0", optional = true }
borsh = "^0.10"
num-derive = "^0.4.2"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = { workspace = true }
solana-keypair = { workspace = true }
solana-transaction = { workspace = true }
spl-token-2022 = { version = "7", features = [
  "no-entrypoint",
], optional = true }
thiserror = "^1.0"
spl-associated-token-account = { version = "6", features = [
  "no-entrypoint",
], optional = true }
spl-token-metadata-interface = { version = "0.6", optional = true }
spl-pod = { version = "0.5", optional = true }
bytemuck = "1.22.0"
solana-signer.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = { workspace = true }
yellowstone-shield = { workspace = true }

[dev-dependencies.yellowstone-shield-client]
path = "."
features = ["token-extensions"]
