[package]
name = "yellowstone-shield-client"
version = "0.5.0"
description = "A generated Rust library for the Blocklist program"
repository = "https://github.com/rpcpool/yellowstone-shield"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[features]
test-sbf = []
fetch = []
anchor-idl-build = []
anchor = ["dep:anchor-lang"]
serde = ["dep:serde", "dep:serde_with"]
token-extensions = [
  "dep:spl-associated-token-account",
  "dep:spl-token-2022",
  "dep:spl-token-metadata-interface",
  "dep:spl-pod",
]

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
solana-program = { workspace = true }
solana-keypair = { workspace = true }
solana-transaction = { workspace = true }
spl-token-2022 = { workspace = true, features = [
  "no-entrypoint",
], optional = true }
thiserror = { workspace = true }
spl-associated-token-account = { workspace = true, features = [
  "no-entrypoint",
], optional = true }
spl-token-metadata-interface = { workspace = true, optional = true }
spl-pod = { workspace = true, optional = true }
bytemuck = { workspace = true }
solana-signer.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = { workspace = true }
yellowstone-shield = { workspace = true }

[dev-dependencies.yellowstone-shield-client]
path = "."
features = ["token-extensions"]
